content section text

--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,4 @@
-body{
-  width: 70%;
-  margin: auto;
-}
+@import url('https://fonts.googleapis.com/css2?family=Noticia+Text:ital,wght@0,400;0,700;1,400;1,700&display=swap');
 
 @font-face{
   font-family: "Chomsky";
@@ -12,4 +9,9 @@ body{
 @font-face {
   font-family: "OldNewspaper";
   src: url('./fonts/OldNewspaperTypes.ttf') format('truetype');
+}
+
+body{
+  width: 70%;
+  margin: auto;
 }
