--- a/src/App.css
+++ b/src/App.css
@@ -15,3 +15,10 @@ body{
   width: 70%;
   margin: auto;
 }
+
+@media screen and (max-width:940px){
+  body{
+    width: 90%;
+    margin: auto;
+  }
+}
