--- a/src/page-style/ContentTwo.css
+++ b/src/page-style/ContentTwo.css
@@ -39,5 +39,10 @@
   #crypto-desc, #fake-desc, #server-desc, #old-desc{
     text-align: justify;
   }
-  
+}
+
+@media screen and (min-width:500px){
+  .projects{
+    grid-template-columns: 1fr 1fr;
+  }
 }
