--- a/src/App.css
+++ b/src/App.css
@@ -16,15 +16,16 @@ body{
   margin: auto;
 }
 
-@media screen and (max-width:940px){
+@media only screen and (max-width:940px){
   body{
     width: 90%;
     margin: auto;
   }
 }
 
-@media screen and (max-width:1500px){
+@media only screen and (min-width:1500px){
   body{
     width: 100%;
+    margin: auto;
   }
 }
