--- a/src/App.css
+++ b/src/App.css
@@ -23,9 +23,23 @@ body{
   }
 }
 
-@media only screen and (min-width:1500px){
+@media only screen and (min-width:950px){
   body{
     width: 100%;
+    margin: auto;
+  }
+}
+
+@media only screen and (min-width:1400px){
+  body{
+    width: 90%;
+    margin: auto;
+  }
+}
+
+@media only screen and (min-width:1600px){
+  body{
+    width: 70%;
     margin: auto;
   }
 }
