--- a/src/App.css
+++ b/src/App.css
@@ -14,6 +14,10 @@
 body{
   width: 70%;
   margin: auto;
+
+  /* background-color: #f8f5de; */
+  background-color: #f9f7f1;
+  /* background-image: linear-gradient(to bottom rgba(255, 210, 0, 0.4), rgba(200, 160, 0, 0.1) 11%, rgba(0, 0, 0, 0) 35%, rgba(200, 160, 0 ,0.1) 65%); */
 }
 
 @media only screen and (max-width:940px){
@@ -42,4 +46,8 @@ body{
     width: 70%;
     margin: auto;
   }
+}
+
+.aka{
+  display: none;
 }
