--- a/src/App.css
+++ b/src/App.css
@@ -16,7 +16,7 @@ body{
   margin: auto;
 
   /* background-color: #f8f5de; */
-  background-color: #f9f7f1;
+  background-color: white;
   /* background-image: linear-gradient(to bottom rgba(255, 210, 0, 0.4), rgba(200, 160, 0, 0.1) 11%, rgba(0, 0, 0, 0) 35%, rgba(200, 160, 0 ,0.1) 65%); */
 }
 
@@ -24,6 +24,7 @@ body{
   body{
     width: 90%;
     margin: auto;
+    background-color: #f9f7f1;
   }
 }
 
@@ -39,6 +40,10 @@ body{
     width: 90%;
     margin: auto;
   }
+  .App{
+    padding: 2rem;
+    box-shadow: 3px 3px 10px black;
+  }
 }
 
 @media only screen and (min-width:1600px){
@@ -46,8 +51,16 @@ body{
     width: 70%;
     margin: auto;
   }
+  .App{
+    padding: 2rem;
+    box-shadow: 3px 3px 10px black;
+  }
 }
 
 .aka{
   display: none;
+}
+
+.App{
+  background-color: #f9f7f1;
 }
